Added main five posts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BBUnoffical</string>
+    <string name="main_url">https://www.barcablaugranes.com/</string>
 </resources>
