--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="comments">Comments</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="image_of_post">Image of post</string>
 </resources>
